--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,11 @@ input {
     justify-content: flex-end;
 }
 
+#video-bg {
+    position: absolute;
+    z-index: -1;
+}
+
 #card {
     background-color: #FFDAC0;
     border: 5px solid #323232;
