--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,16 @@
+/* GENERIC */
+
 * {
-	box-sizing: border-box;
-	/* transition: all ease-in-out 100ms; */
+    box-sizing: border-box;
 }
 
 body {
-    display: none;
+    display: none;   /* hide content until page loaded */
     font-family: "Pixelify Sans", serif;
     font-size: 32px;
-    color:#323232;
-    background-color: #FFC97C;
-	margin: 0;
+    color: #202020;
+    background-color: #000000;
+    margin: 0;
 }
 
 h1 {
@@ -25,7 +26,7 @@ p {
 button {
     font-family: "Pixelify Sans", serif;
     font-size: 0.75em;
-    color:#323232;
+    color: #202020;
     border: none;
     border-radius: 80px;
     margin: 0.5em 0;
@@ -33,7 +34,7 @@ button {
 }
 
 button:hover {
-    background-color: #FFE8C9;
+    background-color: #A0D3FF;
     cursor: pointer;
 }
 
@@ -45,34 +46,39 @@ img {
 input {
     font-family: "Pixelify Sans", serif;
     font-size: 0.75em;
-    color:#323232;
+    color: #202020;
     border: none;
     border-radius: 80px;
     margin: 0.5em 0;
     padding: 0.5em 1em;
 }
 
-.highlight {
-    color: #FF1C4D;
-}
-
-.section {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-#video-bg {
-    position: absolute;
-    z-index: -1;
-}
+/* CUSTOM (ALPHABETICAL) */
 
 #card {
     background-color: #FFDAC0;
-    border: 5px solid #323232;
+    border: 5px solid #202020;
     border-radius: 40px;
     margin: 1em;
     padding: 1em;
+}
+
+#character {
+    width: 17%;
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#dialogue_container {
+    height: 50dvh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0 auto;
+    padding: 0 1em;
 }
 
 #heart {
@@ -84,25 +90,8 @@ input {
     width: 2em;
 }
 
-#image_container {
-    height: 50dvh;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-}
-
-#image {
-    width: 7em;
-}
-
-#content_container {
-    height: 50dvh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0 auto;
-    padding: 0 1em;
+.highlight {
+    color: #C2181B;
 }
 
 #letter_button {
@@ -111,4 +100,49 @@ input {
 
 #letter_button:hover {
     cursor: pointer;
+}
+
+#mobile_view {
+    display: none;
+    height: 100dvh;
+    padding: 0 1em;
+    color: white;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#rotate_icon {
+    height: 1em;
+}
+
+#scene_container {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100dvw;
+    transform: translateY(-50%);
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+#video-bg {
+    width: 100%;
+}
+
+/* MOBILE */
+
+@media (max-width: 480px) {
+    #mobile_view {
+        display: flex;
+    }
+
+    #desktop_view {
+        display: none;
+    }
 }
