--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 body {
     display: none;   /* hide content until page loaded */
     font-family: "Pixelify Sans", serif;
-    font-size: 32px;
+    font-size: 2.5dvw;
     color: #202020;
     background-color: #000000;
     margin: 0;
@@ -29,8 +29,9 @@ button {
     color: #202020;
     border: none;
     border-radius: 80px;
-    margin: 0.5em 0;
+    margin: 0 1em;
     padding: 0.5em 1em;
+    width: 50%;
 }
 
 button:hover {
@@ -55,6 +56,13 @@ input {
 
 /* CUSTOM (ALPHABETICAL) */
 
+#buttons {
+    min-height: 12%;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+}
+
 #card {
     background-color: #FFDAC0;
     border: 5px solid #202020;
@@ -72,13 +80,18 @@ input {
 }
 
 #dialogue_container {
-    height: 50dvh;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     margin: 0 auto;
-    padding: 0 1em;
+    padding: 0 20%;
+    padding-bottom: 24%;
 }
 
 #heart {
@@ -138,6 +151,10 @@ input {
 /* MOBILE */
 
 @media (max-width: 480px) {
+    body {
+        font-size: 32px;
+    }
+
     #mobile_view {
         display: flex;
     }
